# Slowverb

./: .gitignore  LICENSE  README.md
app/: README.md  analysis_options.yaml  pubspec.yaml
wasm/phaselimiter/: .gitignore  CMakeLists.txt  README.md  adapter.cpp  adapter_pro.cpp  build.ps1  build.sh  build_pro.ps1  build_win32_conv.ps1  converter.cpp  globals.cpp  run_conversion.ps1  test.cpp  test64.cpp
wasm/phaselimiter/src_original/armadillo-15.2.3/: NOTICE.txt  README.md
wasm/phaselimiter/src_original/armadillo-15.2.3/misc/: armadillo.pc.in
wasm/phaselimiter/src_original/armadillo-15.2.3/src/: wrapper1.cpp  wrapper2.cpp
wasm/phaselimiter/src_original/armadillo-15.2.3/tests2/: attributes.cpp  bounds.cpp  catch.hpp  decomp_eig_gen.cpp  decomp_eig_pair.cpp  decomp_eig_sym.cpp  expr_elem.cpp  expr_misc.cpp  fn_abs.cpp  fn_accu.cpp  fn_all.cpp  fn_any.cpp  fn_as_scalar.cpp  fn_clamp.cpp  fn_cond.cpp  fn_conj.cpp  fn_conv.cpp  fn_conv_to.cpp  fn_cor.cpp  fn_cov.cpp  fn_cross.cpp  fn_cumprod.cpp  fn_cumsum.cpp  fn_det.cpp  fn_diagmat.cpp  fn_diagvec.cpp  fn_diff.cpp  fn_dot.cpp  fn_eigs_gen.cpp  fn_eigs_sym.cpp  fn_eps.cpp  fn_expmat.cpp  fn_find.cpp  fn_find_finite.cpp  fn_find_nonfinite.cpp  fn_find_nonnan.cpp  fn_find_unique.cpp  fn_flip.cpp  fn_hess.cpp  fn_interp1.cpp  (+35 more)
wasm/phaselimiter/src_original/hnswlib-0.8.0/hnswlib/: hnswalg.h  hnswlib.h
wasm/phaselimiter/src_original/resource/: detection_preparation_classical.json  detection_preparation_jazz.json  detection_preparation_pop.json  progression_mapping.json
wasm/phaselimiter/src_original/src/audio_analyzer/: dynamics.h  nmf_spectrogram.h  peak.h  sound_quality2_preparation.cpp  spectrum.h  spectrum_distribution.h  statistics.h  stereo.h  test_dft.cpp  test_sound_quality.cpp  waveform.h
wasm/phaselimiter/src_original/src/audio_visualizer/: main.cpp
wasm/phaselimiter/src_original/src/clear_mixer/: main.cpp
wasm/phaselimiter/src_original/src/effect_test/: main.cpp
wasm/phaselimiter/src_original/src/phase_limiter/: GradCalculator.h  auto_mastering.h  auto_mastering3.cpp  auto_mastering5.cpp  config.h  pre_compression.h
wasm/phaselimiter/src_original/src/spectrogram/: main.cpp
wasm/phaselimiter/stubs/: execinfo.h  fftw3.h  ipp.h  picojson.h
wasm/phaselimiter/stubs/gflags/: gflags.h
wasm/phaselimiter/stubs/tbb/: scalable_allocator.h  tbb.h
(+212 files in other folders)
